--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ html {
 }
 
 body {
+  font-size: 100%;
   background-color: hsl(212, 45%, 89%);
 }
 
@@ -85,14 +86,14 @@ body {
   border-radius: 2rem;
 }
 .container .card .image-container {
+  margin-bottom: 2.4rem;
   border-radius: 1rem;
   overflow: hidden;
-  margin-bottom: 2.4rem;
 }
 .container .card .text-box {
+  margin-bottom: 2.4rem;
   padding: 0 1.6rem;
   text-align: center;
-  margin-bottom: 2.4rem;
 }
 .container .card .text-box h3 {
   font-family: "Outfit", sans-serif;
@@ -115,6 +116,9 @@ body {
 @media (width < 375px) {
   .container {
     min-width: 32rem;
+  }
+  .container .card {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   }
 }
 
