--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,8 @@ $spacing: 1.6rem;
 $size-mobile: 375px;
 $size-desktop: 1440px;
 
+$shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+
 @mixin outfit-font($fsize: $font-med, $fweight: $font-regular) {
   font-family: 'Outfit', sans-serif;
   font-optical-sizing: auto;
@@ -28,6 +30,7 @@ html {
 }
 
 body {
+  font-size: 100%;
   background-color: $light-gray;
 }
 
@@ -44,15 +47,15 @@ body {
     border-radius: 2rem;
 
     .image-container {
+      margin-bottom: 2.4rem;
       border-radius: 1rem;
       overflow: hidden;
-      margin-bottom: 2.4rem;
     }
 
     .text-box {
+      margin-bottom: calc(4rem - $spacing);
       padding: 0 $spacing;
       text-align: center;
-      margin-bottom: calc(4rem - $spacing);
 
       h3 {
         @include outfit-font($font-large, $font-bold);
@@ -73,5 +76,9 @@ body {
 @media (width < $size-mobile) {
   .container {
     min-width: 32rem;
+
+    .card {
+      box-shadow: $shadow;
+    }
   }
 }
